# SoloCoder

./: CMakeLists.txt  ChildFrm.cpp  ChildFrm.h  FileExplorer.cpp  FileExplorer.h  FileExplorer.rc  FileExplorerDoc.cpp  FileExplorerDoc.h  FileExplorerView.cpp  FileExplorerView.h  FileListCtrl.cpp  FileListCtrl.h  FilePreview.cpp  FilePreview.h  FileTreeCtrl.cpp  FileTreeCtrl.h  LICENSE  MainFrm.cpp  MainFrm.h  Resource.h  stdafx.h
